# evaporating-images-polytope

./: .gitignore  README.md  moose-disappear.apng  polytope.yml
code/coords-api/: .envrc  Dockerfile  Makefile  go.mod  main.go
code/frontend/: grid.js  index.html
code/redis-updater/: pyproject.toml
code/redis-updater/api/: conway.py  figures.py  server.py  update_redis.py
conf/: ngrok.yml.template
