[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Apparently Required <not-a-real-name@localhost>"]

[tool.poetry.dependencies]
redis = "^5.0.4"
python = "^3.10"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.277"
pytest = "^7.4.0"
ipdb = "^0.13.13"
ipython = "^8.15.0"

[tool.poetry.scripts]
api = 'api.server:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
